--- a/web/src/pages/HomePage/HomePage.css
+++ b/web/src/pages/HomePage/HomePage.css
@@ -52,12 +52,12 @@ p{
 }
 
 
-#extraField{
+.separator{
+  height: 20px;
+}
+
+.signup{
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.separator{
-  height: 20px;
 }
