--- a/web/src/components/Spinner/Spinner.css
+++ b/web/src/components/Spinner/Spinner.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100%;
   }
-  
+
   .loading-spinner {
     border: 4px solid rgba(0, 0, 0, 0.1);
     width: 40px;
@@ -14,19 +14,18 @@
     border-left-color: #09f;
     animation: spin 1s linear infinite;
   }
-  
-  .error {
+
+  /*.error {
     color: red;
     background-color: #fdd;
     padding: 10px;
     border-radius: 5px;
     margin: 10px 0;
-  }
+  }*/
 
-  
+
   @keyframes spin {
     to {
       transform: rotate(360deg);
     }
   }
-  
