--- a/web/src/pages/DashboardPage/DashboardPage.css
+++ b/web/src/pages/DashboardPage/DashboardPage.css
@@ -2,6 +2,12 @@
 
 /* General Styles */
 .dashboard-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    background-color: paleturquoise;
+    height: 1080px;
     padding: 2rem;
     font-family: 'Arial', 'sans-serif';
   }
